# frenetframe

changmin/: CMakeLists.txt  package.xml
changmin/launch/: one.launch
changmin/src/: client_test.cpp
detecting_wall/: CMakeLists.txt  package.xml
detecting_wall/msg/: frenet.msg
detecting_wall/src/: cublic_spline.cpp  find_waypoint copy.cpp  find_waypoint.cpp  frenet_optimal copy.cpp  frenet_optimal.cpp  point_cloud_to_base_link copy 2.cpp  point_cloud_to_base_link.cpp
frenet/: CMakeLists.txt  package.xml
frenet/action/: Frenet.action
frenet/include/frenet/: CublicSpline.hpp  FrenetPath.hpp  QuinticPolynomial.hpp
frenet/src/: CublicSpline.cpp  QuinticPolynomial.cpp  mode_one.cpp  mode_one_before_obs.cpp  test.cc
laser_filters/examples/: box_filter.yaml  box_filter_example.launch
obstacle_detector/launch/: nodes.launch
obstacle_detector/src/: obstacle_extractor.cpp
pointcloud_to_laserscan/launch/: sample_node.launch
scan_tools/laser_scan_matcher/demo/: demo.launch
scan_tools/laser_scan_matcher/src/: laser_scan_matcher.cpp
scout/scout_description/rviz/: navigation.rviz
scout/scout_description/urdf/: scout_v2.xacro
scout/scout_gazebo_sim/launch/: scout_cave.launch  scout_empty_world copy.launch
scout/scout_gazebo_sim/worlds/: cave.world
velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
